<resources>
    <string name="app_name">HELPTManager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Membership Strings -->
    <string name="monthly_price">월 %,d 원</string>
    <string name="stringMembershipTitle">개월 회원권</string>
    <string name="stringMembershipPrice">원</string>
    <string name="stringMembershipMonthPrice">원</string>
    <string name="stringRegisterMembershipButton">등록 완료</string>
    <string name="stringMembershipTitleText">회원권 관리</string>
    <string name="stringRegisterMembershipTitle">회원권 등록하기</string>
    <string name="descriptionMembershipBackButton">뒤로가기 버튼</string>
    <string name="descriptionMembershipHamburgerButton">햄버거 버튼 (더보기)</string>
    <string name="stringEtRegisterMembershipTitle">1</string>
    <string name="stringEtRegisterMembershipPrice">50,000</string>
    <string name="stringMembershipModify">수정하기</string>
    <string name="stringMembershipDelete">삭제하기</string>
    <string name="stringModifyMembershipTitle">회원권 수정하기</string>
    <string name="stringModifyMembershipButton">수정 완료</string>

    <!-- MemberDetail Strings -->
    <string name="stringMemberDetailTitleText">회원 조회</string>
    <string name="stringMemberDetailName">이름</string>
    <string name="stringMemberDetailGender">성별</string>
    <string name="stringMemberDetailHeight">키(cm)</string>
    <string name="stringMemberDetailWeight">몸무게(kg)</string>
    <string name="stringMemberDetailMembership">회원권 기간</string>
    <string name="stringMemberDetailNameContent">이름</string>
    <string name="stringMemberDetailGenderContent">성별</string>
    <string name="stringMemberDetailHeightContent">165</string>
    <string name="stringMemberDetailWeightContent">60</string>
    <string name="stringMemberDetailMembershipContent">20xx.xx.xx ~ 20xx.xx.xx</string>
    <string name="stringMemberDetailShowExerciseRecord">운동기록</string>
    <string name="stringMemberDetailExerciseRecordName">최윤서</string>
    <string name="stringMemberDetailExerciseRecordName_2">님의 운동기록</string>
    <string name="stringExerciseRecordDate">%1$d월 %2$d일 운동기록</string>
    <string name="stringExerciseRecordName">랫 풀 다운</string>
    <string name="stringExerciseRecordPart">상체 어깨</string>
    <string name="stringExerciseRecordReps">30회</string>
    <string name="stringExerciseRecordSets">5세트</string>
    <string name="stringExerciseRecordTime">00:10:10</string>

    <!-- Record Calendar Strings -->
    <string name="reps_format">%d회</string>
    <string name="sets_format">%d세트</string>

    <!-- Notice Strings -->
    <string name="stringNoticeTitleText">공지사항 관리</string>
    <string name="stringRegisterNoticeTitle">공지사항 등록</string>
    <string name="stringNoticeCreateButton">등록</string>
    <string name="stringNoticeCreateTitleTV">제목을 입력해주세요</string>
    <string name="stringNoticeCreateDateTV">20xx.xx.xx</string>
    <string name="stringNoticeCreateContentTV">공지사항을 입력해주세요</string>
    <string name="stringModifyNoticeTitle">공지사항 수정</string>
    <string name="stringNoticeModifyButton">수정</string>
    <string name="stringNoticeDetailTitleText">공지사항</string>
    <string name="stringNoticeDetailContentTV">내용</string>
    <string name="stringNoticeDetailTitleTV">제목</string>


    <!-- Other Strings -->
    <string name="menu_ticket">이용권 등록 및 수정</string>
    <string name="menu_qr">입장용 QR 스캔</string>
    <string name="menu_fitness">기구 등록 및 조회</string>
    <string name="menu_user">회원 등록 및 조회</string>
    <string name="menu_notice">공지사항 관리</string>
    <string name="menu_chat">채팅방 등록</string>
    <string name="menu_entry_log">출입 관리</string>

    <string name="auth_set_biz">사업자 정보를 입력해주세요</string>
    <string name="auth_set_gym">운동시설 정보를 입력해주세요</string>


    <string name="home_greet_msg">안녕하세요!\n%s 사장님</string>

    <string name="equip_set">%1$dkg %2$d회 %3$d세트</string>
    <string name="stringMembershipMonthTitleTV">월</string>
    <string name="stringMemberDetailCm">%dcm</string>
    <string name="stringMemberDetailKg">%dkg</string>


</resources>