<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="364dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/exercise_record_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvExerciseRecordName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="18dp"
            android:gravity="top"
            android:lineSpacingExtra="5sp"
            android:text="@string/stringExerciseRecordName"
            android:textAppearance="@style/styleExerciseRecordName"
            android:translationY="-2.7sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvExerciseRecordPart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stringExerciseRecordPart"
            android:textAppearance="@style/styleExerciseRecordPart"
            android:lineSpacingExtra="4sp"
            android:translationY="-1.84sp"
            android:gravity="top"
            android:layout_marginStart="17dp"
            android:layout_marginTop="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvExerciseRecordName"
            />

        <TextView
            android:id="@+id/tvExerciseRecordSets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="19dp"
            android:gravity="top"
            android:lineSpacingExtra="4sp"
            android:text="@string/stringExerciseRecordSets"
            android:textAppearance="@style/styleExerciseRecordReps"
            android:translationY="-1.84sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvExerciseRecordReps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="3dp"
            android:gravity="top"
            android:lineSpacingExtra="4sp"
            android:text="@string/stringExerciseRecordReps"
            android:textAppearance="@style/styleExerciseRecordReps"
            android:translationY="-1.84sp"
            app:layout_constraintEnd_toStartOf="@id/tvExerciseRecordSets"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvExerciseRecordTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="19dp"
            android:gravity="top"
            android:lineSpacingExtra="4sp"
            android:text="@string/stringExerciseRecordTime"
            android:textAppearance="@style/styleExerciseRecordTime"
            android:translationY="-1.84sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvExerciseRecordReps" />




    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>