<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".notice.NoticeCreateFragment">
    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/noticeCreateDrawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/membership_background"
            tools:context=".notice.NoticeCreateFragment">
            <include
                android:id="@+id/noticeCreateToolbar"
                layout="@layout/toolbar_notice_create"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/noticeCreateTitleCL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/notice_create_title_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/noticeCreateToolbar">
                <EditText
                    android:id="@+id/noticeCreateTitleET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:hint="@string/stringNoticeCreateTitleTV"
                    android:textAppearance="@style/styleNoticeCreateTitleTV"
                    android:lineSpacingExtra="3sp"
                    android:translationY="-1.26sp"
                    android:gravity="top"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <TextView
                    android:id="@+id/noticeCreateDateTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="24dp"
                    android:text="@string/stringNoticeCreateDateTV"
                    android:textAppearance="@style/styleNoticeCreateDateTV"
                    android:gravity="top"
                    android:lineSpacingExtra="4sp"
                    android:translationY="-1.84sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/noticeCreateTitleET" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/noticeCreateContentCL"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/noticeCreateTitleCL" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                    <EditText
                        android:id="@+id/noticeCreateContentET"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/stringNoticeCreateContentTV"
                        android:background="@null"
                        android:backgroundTint="@color/black"
                        android:textAppearance="@style/styleNoticeCreateContentTV" />
                </LinearLayout>






            </androidx.constraintlayout.widget.ConstraintLayout>
            
        </androidx.constraintlayout.widget.ConstraintLayout>
        
        
    </androidx.drawerlayout.widget.DrawerLayout>
</FrameLayout>